# genesis_lite6

./: .gitignore  README.md  pyproject.toml
docs/: CAMERA_GUIDE.md  CUSTOM_TOOL_GUIDE.md
examples/: control_lite6.py  hello_lite6.py  ik_lite6.py  teleop_zhonglin.py
genesis_lite6/: __init__.py  config.py
genesis_lite6.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
genesis_lite6/assets/meshes/gripper/lite/visual/: finger1.dae  finger2.dae  shell.dae
genesis_lite6/assets/urdf/: eef_ufgripper_ori.urdf  lite6_base.urdf
scripts/: generate_urdf.py
